Add Task class, variables, edit dashboard (add columns)

--- a/src/app/_helpers/variables.sass
+++ b/src/app/_helpers/variables.sass
@@ -1,5 +1,11 @@
+$information-phone: "only screen and (min-width : 768px)"
+
+
 $primary-color: #2196F3
 $primary-color-dark: #1976D2
 
 $primary-text-color: rgba(255, 255, 255, .87)
 $secondary-text-color: rgba(255, 255, 255, .54)
+
+$border-color: #E0E0E0
+$faced-color: #FAFAFA
