--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,50 +1,70 @@
-<section class="cos" style="margin-bottom: 100px">
+<section class="dashboard">
 
     <div class="row">
 
-      <div class="col-4">
+      <div class="col-12 col-md-4">
         <div class="column-title">
           Todo
         </div>
-        <div class="" dnd-sortable-container [dropZones]="['boxers-zone']" [sortableData]="listBoxers">
+        <div class="tasks-container" dnd-sortable-container [dropZones]="['boxers-zone']" [sortableData]="listBoxers">
 
-            <md-card *ngFor="let item of listBoxers; let i = index" class="list-group-item" dnd-sortable [sortableIndex]="i">
-              {{item}}
-            </md-card>
+          <md-card *ngFor="let item of listBoxers; let i = index" dnd-sortable [sortableIndex]="i" >
+            <md-card-header>
+              <div md-card-avatar class="example-header-image"></div>
+              <md-card-title>{{item.title}}</md-card-title>
+              <md-card-subtitle>{{item.description}}</md-card-subtitle>
+            </md-card-header>
+            <md-card-footer>
+              {{item.deadline | date:"shortDate"}}
+            </md-card-footer>
+          </md-card>
+
+          <div *ngIf="listBoxers.length === 0" class="no-tasks">No tasks here</div>
 
         </div>
       </div>
 
-      <div class="col-4">
+      <div class="col-12 col-md-4">
         <div class="column-title">
-          First Team
+          In progress
         </div>
-        <div dnd-sortable-container [dropZones]="['boxers-zone']" [sortableData]="listTeamOne" class="cos">
-          <ul class="list-group">
-            <li *ngFor="let item of listTeamOne; let i = index" class="list-group-item" dnd-sortable
-                [sortableIndex]="i">
-              {{item}}
-            </li>
-          </ul>
-          <div *ngIf="listTeamOne.length === 0">Bleble</div>
+        <div class="tasks-container" dnd-sortable-container [dropZones]="['boxers-zone']" [sortableData]="listTeamOne">
+
+          <md-card *ngFor="let item of listTeamOne; let i = index" dnd-sortable [sortableIndex]="i" >
+            <md-card-header>
+              <div md-card-avatar class="example-header-image"></div>
+              <md-card-title>{{item.title}}</md-card-title>
+              <md-card-subtitle>{{item.description}}</md-card-subtitle>
+            </md-card-header>
+            <md-card-footer>
+              {{item.deadline | date:"shortDate"}}
+            </md-card-footer>
+          </md-card>
+
+          <div *ngIf="listTeamOne.length === 0" class="no-tasks">No tasks here</div>
         </div>
       </div>
-      <div class="col-4">
+
+      <div class="col-12 col-md-4">
         <div class="column-title">
-          Second Team
+          Done
         </div>
-        <div dnd-sortable-container [dropZones]="['boxers-zone']" [sortableData]="listTeamTwo" class="cos">
-          <ul class="list-group">
-            <li *ngFor="let item of listTeamTwo; let i = index" class="list-group-item" dnd-sortable [sortableIndex]="i">
-              {{item}}
-            </li>
-          </ul>
-          <div *ngIf="listTeamTwo.length === 0" style="cursor: default">No tasks here</div>
+        <div class="tasks-container" dnd-sortable-container [dropZones]="['boxers-zone']" [sortableData]="listTeamTwo">
+          <md-card *ngFor="let item of listTeamTwo; let i = index" dnd-sortable [sortableIndex]="i" >
+            <md-card-header>
+              <div md-card-avatar class="example-header-image"></div>
+              <md-card-title>{{item.title}}</md-card-title>
+              <md-card-subtitle>{{item.description}}</md-card-subtitle>
+            </md-card-header>
+            <md-card-footer>
+              {{item.deadline | date:"shortDate"}}
+            </md-card-footer>
+          </md-card>
+
+          <div *ngIf="listTeamTwo.length === 0" class="no-tasks">No tasks here</div>
         </div>
       </div>
 
     </div>
-
-
 
 </section>
