--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -1,15 +1,46 @@
+@import '../_helpers/variables'
+
 .row
   margin: 0
 
+div[class*="col-"]
+  padding: 0
+  border-right: 1px solid $border-color
+
+.dashboard
+  margin: 10px 10px 0 10px
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12)
+  border-top: 1px solid $border-color
+
+//min-height: 500px
+
+
 .column-title
-  margin: 50px 0
+  border-bottom: 1px solid $border-color
   text-align: center
-  background: #FAFAFA
+  background: $faced-color
   padding: 25px 0
+  &:last-child
+    border-right: none
 
-
-md-tab
-  margin-top: 50px
 
 md-card
   margin-bottom: 10px
+
+.example-header-image
+  background: url('https://camo.mybb.com/e01de90be6012adc1b1701dba899491a9348ae79/687474703a2f2f7777772e6a71756572797363726970742e6e65742f696d616765732f53696d706c6573742d526573706f6e736976652d6a51756572792d496d6167652d4c69676874626f782d506c7567696e2d73696d706c652d6c69676874626f782e6a7067')
+
+md-card-footer
+  text-align: center
+
+.tasks-container
+  padding: 20px
+  position: relative
+
+  @media #{$information-phone}
+    min-height: 500px
+
+
+.no-tasks
+  margin: auto 0
+  text-align: center
