Dodano modale, zmieniono rozmieszczenie na flexa. Do zrobienia: zapis taskow

--- a/src/app/_helpers/variables.sass
+++ b/src/app/_helpers/variables.sass
@@ -1,4 +1,5 @@
 $information-phone: "only screen and (min-width : 768px)"
+$small-devices: "only screen and (max-width : 768px)"
 
 
 $primary-color: #2196F3
@@ -9,3 +10,8 @@ $secondary-text-color: rgba(255, 255, 255, .54)
 
 $border-color: #E0E0E0
 $faced-color: #FAFAFA
+
+$success-color: #8BC34A
+$fail-color: #F44336
+
+$icon-color: rgba(0, 0, 0, 0.35)
