--- a/src/app/sidebar/sidebar.component.sass
+++ b/src/app/sidebar/sidebar.component.sass
@@ -1,5 +1,8 @@
 @import '../_helpers/variables'
 
+.sidebar-section
+  font-family: 'Roboto', sans-serif
+
 .toggle-button
   margin-top: 10px
   cursor: pointer
@@ -56,6 +59,7 @@
       .text
         transition: all 250ms ease-in-out
         position: fixed
+        margin-top: 2px
         margin-left: 10px
 
   ul
