--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,70 +1,85 @@
 <section class="dashboard">
 
-    <div class="row">
-
-      <div class="col-12 col-md-4">
-        <div class="column-title">
-          Todo
-        </div>
-        <div class="tasks-container" dnd-sortable-container [dropZones]="['boxers-zone']" [sortableData]="listBoxers">
-
-          <md-card *ngFor="let item of listBoxers; let i = index" dnd-sortable [sortableIndex]="i" >
-            <md-card-header>
-              <div md-card-avatar class="example-header-image"></div>
-              <md-card-title>{{item.title}}</md-card-title>
-              <md-card-subtitle>{{item.description}}</md-card-subtitle>
-            </md-card-header>
-            <md-card-footer>
-              {{item.deadline | date:"shortDate"}}
-            </md-card-footer>
-          </md-card>
-
-          <div *ngIf="listBoxers.length === 0" class="no-tasks">No tasks here</div>
-
-        </div>
-      </div>
-
-      <div class="col-12 col-md-4">
-        <div class="column-title">
-          In progress
-        </div>
-        <div class="tasks-container" dnd-sortable-container [dropZones]="['boxers-zone']" [sortableData]="listTeamOne">
-
-          <md-card *ngFor="let item of listTeamOne; let i = index" dnd-sortable [sortableIndex]="i" >
-            <md-card-header>
-              <div md-card-avatar class="example-header-image"></div>
-              <md-card-title>{{item.title}}</md-card-title>
-              <md-card-subtitle>{{item.description}}</md-card-subtitle>
-            </md-card-header>
-            <md-card-footer>
-              {{item.deadline | date:"shortDate"}}
-            </md-card-footer>
-          </md-card>
-
-          <div *ngIf="listTeamOne.length === 0" class="no-tasks">No tasks here</div>
-        </div>
-      </div>
-
-      <div class="col-12 col-md-4">
-        <div class="column-title">
-          Done
-        </div>
-        <div class="tasks-container" dnd-sortable-container [dropZones]="['boxers-zone']" [sortableData]="listTeamTwo">
-          <md-card *ngFor="let item of listTeamTwo; let i = index" dnd-sortable [sortableIndex]="i" >
-            <md-card-header>
-              <div md-card-avatar class="example-header-image"></div>
-              <md-card-title>{{item.title}}</md-card-title>
-              <md-card-subtitle>{{item.description}}</md-card-subtitle>
-            </md-card-header>
-            <md-card-footer>
-              {{item.deadline | date:"shortDate"}}
-            </md-card-footer>
-          </md-card>
-
-          <div *ngIf="listTeamTwo.length === 0" class="no-tasks">No tasks here</div>
-        </div>
-      </div>
-
+  <div class="navigation-row">
+    <div class="item">
+      <button mdTooltip="Add task" md-mini-fab class="add-task-button" (click)="openAddTaskDialog()">
+        <i class="material-icons">add</i>
+      </button>
     </div>
+    <div class="item">
+      <button mdTooltip="Save" md-mini-fab class="save-task-button" (click)="saveTasks()">
+        <i class="material-icons">save</i>
+      </button>
+    </div>
+  </div>
+
+  <div class="lists-row">
+    <!-- To do -->
+    <div class="column" dnd-sortable-container [dropZones]="['all-tasks']" [sortableData]="todoList">
+      <div class="column-title">
+        Todo
+      </div>
+
+      <div>
+      <md-card (click)="openAddTaskDialog()" *ngFor="let item of todoList; let i = index" dnd-sortable [sortableIndex]="i"
+               [style.border-left]="'5px solid '+item.color" >
+        <md-card-header>
+          <md-card-title>{{item.title}}</md-card-title>
+          <md-card-subtitle>{{item.description}}</md-card-subtitle>
+        </md-card-header>
+        <md-card-footer>
+          <span *ngIf="item.deadline">{{item.deadline | date:"shortDate"}}</span>
+          <span *ngIf="!item.deadline">no deadline</span>
+        </md-card-footer>
+      </md-card>
+
+      <div *ngIf="todoList.length === 0" class="no-tasks">No tasks here</div>
+      </div>
+    </div> <!-- /To do -->
+
+    <!-- In progress-->
+    <div class="column" dnd-sortable-container [dropZones]="['all-tasks']" [sortableData]="inProgressList">
+      <div class="column-title">
+        In progress
+      </div>
+
+      <md-card *ngFor="let item of inProgressList; let i = index" dnd-sortable [sortableIndex]="i"
+               [style.border-left]="'5px solid '+item.color">
+        <md-card-header>
+          <md-card-title>{{item.title}}</md-card-title>
+          <md-card-subtitle>{{item.description}}</md-card-subtitle>
+        </md-card-header>
+        <md-card-footer>
+          <span *ngIf="item.deadline">{{item.deadline | date:"shortDate"}}</span>
+          <span *ngIf="!item.deadline">no deadline</span>
+        </md-card-footer>
+      </md-card>
+
+      <div *ngIf="inProgressList.length === 0" class="no-tasks">No tasks here</div>
+
+    </div> <!-- /In progress -->
+
+    <!-- Done -->
+    <div class="column" dnd-sortable-container [dropZones]="['all-tasks']" [sortableData]="doneList">
+      <div class="column-title">
+        Done
+      </div>
+
+      <md-card *ngFor="let item of doneList; let i = index" dnd-sortable [sortableIndex]="i"
+               [style.border-left]="'5px solid '+item.color">
+        <md-card-header>
+          <md-card-title>{{item.title}}</md-card-title>
+          <md-card-subtitle>{{item.description}}</md-card-subtitle>
+        </md-card-header>
+        <md-card-footer>
+          <span *ngIf="item.deadline">{{item.deadline | date:"shortDate"}}</span>
+          <span *ngIf="!item.deadline">no deadline</span>
+        </md-card-footer>
+      </md-card>
+
+      <div *ngIf="doneList.length === 0" class="no-tasks">No tasks here</div>
+
+    </div> <!-- /Done -->
+  </div>
 
 </section>
