--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -10,22 +10,10 @@
   background: $faced-color
   padding: 25px 0
 
-md-card
-  margin: 20px
-  min-height: 100px
-
 button
   &:focus
     outline: none
     border: none
-
-md-card-footer
-  background: $faced-color
-  color: $icon-color
-  font-size: 0.8rem
-  padding: 5px
-  border-top: 1px solid $border-color
-  text-align: center
 
 .no-tasks
   margin: 45% 0
@@ -35,9 +23,11 @@ md-card-footer
 .add-task-button
   background: $primary-color
 
-.save-task-button
+.save-tasks-button
   background: $primary-color-dark
-  font-size: 10px
+
+.remove-tasks-button
+  background: $fail-color
 
 // FLEX ---------------------------------------------------------
 .navigation-row
