--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
       </button>
     </div>
     <div class="item">
-      <button mdTooltip="Save" md-mini-fab class="save-tasks-button" (click)="saveTasks()">
+      <button mdTooltip="Save" md-mini-fab class="save-tasks-button" (click)="openSaveSnackBar()">
         <i class="material-icons">save</i>
       </button>
     </div>
@@ -16,7 +16,7 @@
         <i class="material-icons">delete_forever</i>
       </button>
       <md-menu #remove="mdMenu">
-        <button md-menu-item (click)="removeTasks()">Yes</button>
+        <button md-menu-item (click)="openRemoveSnackBar()">Yes</button>
         <button md-menu-item>No</button>
       </md-menu>
     </div>
