--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,59 +1,60 @@
 .sidebar-section {
   font-family: "Roboto", sans-serif; }
 
-.toggle-button {
-  margin-top: 10px;
-  cursor: pointer;
-  width: 100%;
-  display: inline-block; }
-  .toggle-button button {
-    transition: transform 350ms ease-in-out;
-    border: none;
-    float: right;
-    background: transparent;
-    cursor: pointer;
-    color: #fff;
-    transform: scale(5);
-    font-size: 50px; }
-  .toggle-button .show-sidebar {
-    transform: rotate(0deg); }
-  .toggle-button .hide-sidebar {
-    transform: rotate(180deg); }
-
-.sidebar {
-  position: fixed;
+nav {
+  position: absolute;
   top: 0;
   bottom: 0;
+  left: 0;
   overflow: hidden;
   background-color: #2196F3 !important;
   transition: width 250ms ease-in-out; }
-  .sidebar.opened {
+  nav.opened {
     width: 200px; }
-  .sidebar.closed {
+  nav.closed {
     width: 60px; }
-  .sidebar .nav-item {
-    cursor: pointer;
-    margin-top: 5px; }
-    .sidebar .nav-item .active {
-      background-color: #1976D2;
-      color: rgba(255, 255, 255, 0.54); }
-    .sidebar .nav-item .nav-link {
-      width: 200px;
-      padding: 10px; }
-      .sidebar .nav-item .nav-link:hover {
-        background-color: #1976D2; }
-      .sidebar .nav-item .nav-link .icon {
-        background: no-repeat center;
-        margin-left: 7px; }
-      .sidebar .nav-item .nav-link .text {
-        transition: all 250ms ease-in-out;
-        position: fixed;
-        margin-top: 2px;
-        margin-left: 10px; }
-  .sidebar ul a {
+
+.toggle-button {
+  margin-top: 10px;
+  cursor: pointer;
+  color: rgba(255, 255, 255, 0.87);
+  font-size: 50px;
+  transition: transform 350ms ease-in-out;
+  position: absolute;
+  right: 5px; }
+
+.show-sidebar {
+  transform: rotate(0deg); }
+
+.hide-sidebar {
+  transform: rotate(180deg); }
+
+ul {
+  margin-top: 60px;
+  list-style: none;
+  padding: 0; }
+
+.li-item {
+  padding: 10px 0 10px 16px;
+  cursor: pointer;
+  color: rgba(255, 255, 255, 0.54);
+  text-decoration: none; }
+  .li-item:hover {
+    background: #378fe7;
     color: rgba(255, 255, 255, 0.87); }
-    .sidebar ul a:hover {
-      color: rgba(255, 255, 255, 0.54); }
+
+.li-item.active {
+  background: #1976D2;
+  color: rgba(255, 255, 255, 0.87); }
+
+.text {
+  transition: all 250ms ease-in-out;
+  position: fixed;
+  margin-top: 3px;
+  margin-left: 10px; }
+
+.icon {
+  transition: all 250ms ease-in-out; }
 
 .copyright {
   position: fixed;
