--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,42 +1,45 @@
 <section class="sidebar-section">
-  <nav class="bg-faded sidebar bg-inverse" [ngClass]="{'opened': !sidebarSmall, 'closed': sidebarSmall}"
+  <nav class="sidebar" [ngClass]="{'opened': !sidebarSmall, 'closed': sidebarSmall}"
        id="#my-sidebar">
 
-    <div class="toggle-button" [ngClass]="{'text-center': sidebarSmall, 'text-right': !sidebarSmall}"
+
+      <i class=" toggle-button material-icons" [ngClass]="{'hide-sidebar': !sidebarSmall, 'show-sidebar': sidebarSmall}"
          (click)="toggleSidebar()">
-      <button class="material-icons" [ngClass]="{'hide-sidebar': !sidebarSmall, 'show-sidebar': sidebarSmall}">
         keyboard_arrow_right
-      </button>
-    </div>
-    <ul class="nav flex-column">
+      </i>
 
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/dashboard']" [routerLinkActive]="['active']">
-          <div>
-            <i class="icon material-icons">dashboard</i>
-            <span class="text" [style.opacity]="sidebarSmall ? '0' : '1'"
-                  [style.visibility]="sidebarSmall ? 'hidden' : 'visible'">Dashboard</span>
-          </div>
+    <ul class="my-nav">
 
-        </a>
-      </li>
+      <li class="li-item" [routerLink]="['/dashboard']" [routerLinkActive]="['active']">
 
-      <li class="nav-item">
-        <a class="nav-link">
-          <i class="icon material-icons">settings</i>
+          <i class="icon material-icons">dashboard</i>
           <span class="text" [style.opacity]="sidebarSmall ? '0' : '1'"
-                [style.visibility]="sidebarSmall ? 'hidden' : 'visible'">Settings</span>
-        </a>
+                [style.visibility]="sidebarSmall ? 'hidden' : 'visible'">Dashboard</span>
+
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link">
+      <li class="li-item" [routerLink]="['/info']" [routerLinkActive]="['active']">
+
           <i class="icon material-icons">info</i>
           <span class="text" [style.opacity]="sidebarSmall ? '0' : '1'"
                 [style.visibility]="sidebarSmall ? 'hidden' : 'visible'">Info</span>
-
-        </a>
       </li>
+      <!--<li class="nav-item">-->
+      <!--<a class="nav-link">-->
+      <!--<i class="icon material-icons">settings</i>-->
+      <!--<span class="text" [style.opacity]="sidebarSmall ? '0' : '1'"-->
+      <!--[style.visibility]="sidebarSmall ? 'hidden' : 'visible'">Settings</span>-->
+      <!--</a>-->
+      <!--</li>-->
+
+      <!--<li class="nav-item">-->
+      <!--<a class="nav-link">-->
+      <!--<i class="icon material-icons">info</i>-->
+      <!--<span class="text" [style.opacity]="sidebarSmall ? '0' : '1'"-->
+      <!--[style.visibility]="sidebarSmall ? 'hidden' : 'visible'">Info</span>-->
+
+      <!--</a>-->
+      <!--</li>-->
 
     </ul>
 
@@ -44,7 +47,7 @@
       <span class="author" [style.opacity]="sidebarSmall ? '1' : '0'"
             [style.visibility]="sidebarSmall ? 'visible' : 'hidden'">PI</span>
       <span class="author-full" [style.opacity]="sidebarSmall ? '0' : '1'"
-              [style.visibility]="sidebarSmall ? 'hidden' : 'visible'">Paweł Idziak</span>
+            [style.visibility]="sidebarSmall ? 'hidden' : 'visible'">Paweł Idziak</span>
 
     </div>
   </nav>
