--- a/src/app/dashboard/task/task.component.sass
+++ b/src/app/dashboard/task/task.component.sass
@@ -2,12 +2,13 @@
 
 md-card
   margin: 20px
-  min-height: 100px
+  min-height: 50px
 
 md-card-footer
   background: $faced-color
   color: $icon-color
   font-size: 0.8rem
-  padding: 5px
+  padding: 5px 0
+
   border-top: 1px solid $border-color
   text-align: center
