Dodano tytuł, zmieniono położenie ikon

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,9 @@
 <section class="dashboard">
 
+  <div class="dashboard-title">
+    <p>Manage your tasks quickly and transparently</p>
+  </div>
+
   <div class="navigation-row">
     <div class="item">
       <button mdTooltip="Add task" md-mini-fab class="add-task-button" (click)="openAddTaskDialog()">
