--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -4,6 +4,9 @@
 .dashboard
   margin: 0 20px 50px 20px
 
+.dashboard-title
+  text-align: center
+  color: lighten(black, 20%)
 .column-title
   border-bottom: 1px solid $border-color
   text-align: center
@@ -34,7 +37,7 @@ button
   width: 100%
   display: flex
   flex-direction: row
-  justify-content: center
+  justify-content: flex-end
   margin: 5px 0 8px 0
 
 .lists-row
