Zmiana kolorów, dodane usuwanie pojedynczego taska

--- a/src/app/_helpers/variables.sass
+++ b/src/app/_helpers/variables.sass
@@ -12,6 +12,6 @@ $border-color: #E0E0E0
 $faced-color: #FAFAFA
 
 $success-color: #8BC34A
-$fail-color: #F44336
+$fail-color: #EF5350
 
 $icon-color: rgba(0, 0, 0, 0.35)
