--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -7,6 +7,7 @@
 .dashboard-title
   text-align: center
   color: lighten(black, 20%)
+
 .column-title
   border-bottom: 1px solid $border-color
   text-align: center
@@ -27,7 +28,7 @@ button
   background: $primary-color
 
 .save-tasks-button
-  background: $primary-color-dark
+  background: $success-color
 
 .remove-tasks-button
   background: $fail-color
