--- a/src/app/dashboard/edit-task-dialog/edit-task-dialog.component.sass
+++ b/src/app/dashboard/edit-task-dialog/edit-task-dialog.component.sass
@@ -3,19 +3,19 @@
 .edit-task-dialog-content
   @media #{$information-phone}
     min-width: 400px
-    min-height: 400px
+    min-height: 350px
 
 .lists-row
   display: flex
   flex-direction: column
-  margin: 25px 0
   @media #{$information-phone}
-    margin: 15px 0
+    //margin-top: 15px
     flex-direction: row
     align-items: center
 
 .column
   flex: 1
+  margin-top: 15px
 
 .full-width
   width: 100%
@@ -26,9 +26,12 @@
   padding: 0
   color: $primary-text-color
 
-.my-danger-button
+.my-remove-button
   background: $fail-color
+
+.my-cancel-button
   margin-right: 10px
+  color: $border-color
 
 .my-success-button
   background: $success-color
@@ -37,3 +40,8 @@ md-select
   width: 100%
   @media #{$information-phone}
     width: auto
+
+.to-right
+  display: flex
+  justify-content: flex-end
+  margin-top: -35px
