--- a/src/app/_helpers/variables.sass
+++ b/src/app/_helpers/variables.sass
@@ -7,6 +7,7 @@ $primary-color-dark: #1976D2
 
 $primary-text-color: rgba(255, 255, 255, .87)
 $secondary-text-color: rgba(255, 255, 255, .54)
+$primary-text-color-dark: #455A64
 
 $border-color: #E0E0E0
 $faced-color: #FAFAFA
